--- a/.appveyor.vs2017.yml
+++ b/.appveyor.vs2017.yml
@@ -22,9 +22,20 @@ before_build:
 build_script:
   - msbuild projectfiles\VC15\wesnoth.sln /logger:"C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll"
 
-on_failure:
-  - "python utils\\appveyor\\irc-notify.py wesnoth-dev {bold}{project_name} - {configuration_name} {color_green}{author}{plain} {bold}{short_commit}: {plain}{message} {color_red}Failed,{bold}Details: {plain}{build_url}"
-
 artifacts:
   - path: wesnoth.exe
   - path: wesnothd.exe
+
+notifications:
+  - provider: Webhook
+    url: http://ai0867.net:9999/
+    headers:
+      User-Agent: WesnothAppveyor/1.0
+      Authorization: TODO
+      Configuration: "{configuration_name}"
+      Commit: "{commitId}"
+      Message: "{message}"
+      Url: "{build_url}"
+      Status: "{status}"
+    on_build_success: true
+    on_build_failure: true
