--- a/.appveyor.vs2017.yml
+++ b/.appveyor.vs2017.yml
@@ -7,6 +7,8 @@ configuration:
 platform: win32
 skip_branch_with_pr: true
 shallow_clone: true
+matrix:
+  fast_finish: true # Stop after a build failure
 #before_build:
 #  - cd ..
 #  - ps: wget https://github.com/aquileia/external/archive/VC15.zip -O VC15.zip
